# colored-2

./: CHANGELOG.md  Cargo.toml  README.md
examples/: most_simple.rs  palette_colors.rs  true_colors.rs
src/: color.rs  control.rs  lib.rs  style.rs
tests/: ansi_term_compat.rs
