[package]
name = "colored"
description = "The most simple way to add colors in your terminal"
version = "1.0.0"
authors = ["Thomas Wickham <mackwic@gmail.com>"]
license = "MPL-2.0"
homepage = "https://github.com/mackwic/colored"
repository = "https://github.com/mackwic/colored"
readme = "README.md"
keywords = ["color", "string", "str", "terminal", "ansi_term"]

[dev_dependencies]
ansi_term = "0.7"
